python-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: python
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - name: python
        image: shreyans25/python_new_dockerfile
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: python-svc
  namespace: ingress-nginx
  labels:
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: python
